jfx-impl.xmlを無視ファイルから除外

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ nbproject/*
 !nbproject/project.properties
 !nbproject/project.xml
 !nbproject/build-impl.xml
+!nbproject/jfx-impl.xml
  
 #java specific
 *.class
